--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,8 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  inline-size: 1200px;
+  block-size: 100%;
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
@@ -80,7 +82,7 @@ ol {
 
 .search-form {
   display: flex;
-  align-items:  start;
+  align-items: start;
   gap: 40px;
 }
 
@@ -135,7 +137,7 @@ ol {
 }
 
 .search-form__checkbox-list {
-  display: flex;  
+  display: flex;
   justify-content: space-between;
   align-items: center;
   min-width: 212px;
@@ -198,7 +200,6 @@ ol {
   flex-direction: column;
   gap: 26px;
   align-self: flex-start;
-  width: 399px;
 }
 
 .title {
@@ -216,7 +217,6 @@ ol {
 
 .content__list {
   position: relative;
-  width: 399px;
   height: 298px;
   overflow-y: auto;
 }
@@ -256,27 +256,28 @@ ol {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 2px;
-  width: 394px;
-  min-height: 107px;
+  max-width: 394px;
 }
 
 .content__video-card-description-container {
   flex-grow: 1;
+  padding: 2px 0;
+  max-width: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
 .content__video-card-title {
-  margin-block-end: 6px;
   color: #fff;
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   font-size: 30px;
   font-weight: 700;
   line-height: 1;
-  text-overflow: ellipsis; 
-  white-space: nowrap; 
+  text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
-  max-width: 200px;
 }
 
 .content__video-card-description {
